Restructure Dockerfile for proper build order

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,9 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
+# Copy package files
+COPY package*.json ./
+
 # Install dependencies (including dev dependencies for build)
 RUN npm ci
 
@@ -17,9 +20,6 @@ ARG REACT_APP_API_URL
 ARG REACT_APP_SERVER_URL
 ENV REACT_APP_API_URL=$REACT_APP_API_URL
 ENV REACT_APP_SERVER_URL=$REACT_APP_SERVER_URL
-
-# Fix permissions for node_modules binaries
-RUN chmod +x node_modules/.bin/react-scripts
 
 # Build the application
 RUN npm run build
