--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "server:dev": "nodemon server/index.js",
     "client:dev": "cd client && npm run dev",
-    "build": "cd client && npm run build",
+    "build": "cd client && npm ci && npm run build",
     "start": "node server/index.js",
     "install:all": "npm install && cd client && npm install",
     "setup": "node test-setup.js",
