Add Pump.fun fee claiming functionality

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,11 @@ services:
       MINIMUM_HOLD_PERCENTAGE: ${MINIMUM_HOLD_PERCENTAGE:-0.1}
       WINNER_PAYOUT_PERCENTAGE: ${WINNER_PAYOUT_PERCENTAGE:-50}
       CREATOR_PAYOUT_PERCENTAGE: ${CREATOR_PAYOUT_PERCENTAGE:-50}
-      
+
+      # Pump.fun Fee Claiming
+      AUTO_CLAIM_PUMPFUN_FEES: ${AUTO_CLAIM_PUMPFUN_FEES:-true}
+      FEE_PAYOUT_PERCENTAGE: ${FEE_PAYOUT_PERCENTAGE:-0}
+
       # Security
       JWT_SECRET: ${JWT_SECRET}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
