--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ MINIMUM_HOLD_PERCENTAGE=0.01
 SPIN_INTERVAL_MINUTES=5
 WINNER_PAYOUT_PERCENTAGE=100
 CREATOR_PAYOUT_PERCENTAGE=0
+FEE_PAYOUT_PERCENTAGE=100
 
 # Pot Growth Configuration
 POT_GROWTH_RATE=0.05
@@ -31,7 +32,7 @@ POT_MAX_GROWTH=1000000000
 # Wallet Configuration - Test values for development
 HOT_WALLET_PRIVATE_KEY=[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64]
 FEE_COLLECTION_WALLET=12eRH3HZkUbiFTshi1NHhS3B2cXt6CUL1zomZLjjYB63
-CREATOR_WALLET=11111111111111111111111111111112
+CREATOR_WALLET=E6hWznFZ5NbCy6L44MWoaXHeXbJgDyd18YUc9akv7NPS
 
 # Database Configuration - Optional (will use in-memory if not available)
 REDIS_URL=
@@ -48,3 +49,7 @@ QUICKNODE_API_KEY=your-quicknode-api-key
 # Monitoring
 LOG_LEVEL=info
 ENABLE_METRICS=true
+
+# Pump.fun Fee Claiming
+AUTO_CLAIM_PUMPFUN_FEES=true
+FEE_PAYOUT_PERCENTAGE=0
