Live deployment: Pump.fun fee claiming, social links, game initialization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       HOT_WALLET_PRIVATE_KEY: ${HOT_WALLET_PRIVATE_KEY}
       FEE_COLLECTION_WALLET: ${FEE_COLLECTION_WALLET}
       CREATOR_WALLET: ${CREATOR_WALLET}
+      CREATOR_WALLET_PRIVATE_KEY: ${CREATOR_WALLET_PRIVATE_KEY}
       
       # Game Configuration
       SPIN_INTERVAL_MINUTES: ${SPIN_INTERVAL_MINUTES:-5}
@@ -68,7 +69,8 @@ services:
 
       # Pump.fun Fee Claiming
       AUTO_CLAIM_PUMPFUN_FEES: ${AUTO_CLAIM_PUMPFUN_FEES:-true}
-      FEE_PAYOUT_PERCENTAGE: ${FEE_PAYOUT_PERCENTAGE:-0}
+      FEE_PAYOUT_PERCENTAGE: ${FEE_PAYOUT_PERCENTAGE:-50}
+      PUMPFUN_API_KEY: ${PUMPFUN_API_KEY}
 
       # Security
       JWT_SECRET: ${JWT_SECRET}
